Fix CTA overflow

--- a/style.css
+++ b/style.css
@@ -167,8 +167,7 @@ blockquote {
 
 /* #region CTA */
 .cta {
-    padding: 16px 200px 0 200px;
-    height: 300px;
+    padding: 80px 200px 80px 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -178,10 +177,12 @@ blockquote {
     background-color: #3882F6;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    height: 150px;
+    justify-content: space-between;
     align-items: center;
     border-radius: 8px;
+    flex-wrap: wrap;
+    padding: 50px 64px;
+    gap: 16px;
 }
 
 .cta-info {
